Make ash::VideoDetector recover from viz crashes

Observe mojo connection errors and re-establish the connection once
it's lost.

Bug: 780514
Change-Id: Ic393f737bee97b97ed588ea47040327a4b639a4b
Reviewed-on: https://chromium-review.googlesource.com/c/1340945
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609009}
Former-commit-id: a1d88aae15e62250c7991ece363b184b27c22ec8