ash/wm/video_detector.cc
@@ -7,6 +7,7 @@
 #include "ash/public/cpp/shell_window_ids.h"
 #include "ash/shell.h"
 #include "ash/wm/window_state.h"
+#include "components/viz/host/host_frame_sink_manager.h"
 #include "ui/aura/env.h"
 #include "ui/aura/window.h"
 #include "ui/aura/window_event_dispatcher.h"
@@ -15,15 +16,25 @@
 
 namespace ash {
 
-VideoDetector::VideoDetector(viz::mojom::VideoDetectorObserverRequest request)
+namespace {
+
+// How long to wait before attempting to re-establish a lost connection.
+constexpr base::TimeDelta kReEstablishConnectionDelay =
+    base::TimeDelta::FromMilliseconds(100);
+
+}  // namespace
+
+VideoDetector::VideoDetector()
     : state_(State::NOT_PLAYING),
       video_is_playing_(false),
       window_observer_manager_(this),
       scoped_session_observer_(this),
       is_shutting_down_(false),
-      binding_(this, std::move(request)) {
+      binding_(this),
+      weak_factory_(this) {
   Shell::Get()->aura_env()->AddObserver(this);
   Shell::Get()->AddShellObserver(this);
+  EstablishConnectionToViz();
 }
 
 VideoDetector::~VideoDetector() {
@@ -99,6 +110,30 @@ void VideoDetector::OnVideoActivityStarted() {
 void VideoDetector::OnVideoActivityEnded() {
   video_is_playing_ = false;
   UpdateState();
+}
+
+void VideoDetector::EstablishConnectionToViz() {
+  viz::mojom::VideoDetectorObserverPtr observer;
+  if (binding_.is_bound())
+    binding_.Close();
+  binding_.Bind(mojo::MakeRequest(&observer));
+  binding_.set_connection_error_handler(base::BindOnce(
+      &VideoDetector::OnConnectionError, base::Unretained(this)));
+  Shell::Get()
+      ->aura_env()
+      ->context_factory_private()
+      ->GetHostFrameSinkManager()
+      ->AddVideoDetectorObserver(std::move(observer));
+}
+
+void VideoDetector::OnConnectionError() {
+  if (video_is_playing_)
+    OnVideoActivityEnded();
+  base::ThreadTaskRunnerHandle::Get()->PostDelayedTask(
+      FROM_HERE,
+      base::BindOnce(&VideoDetector::EstablishConnectionToViz,
+                     weak_factory_.GetWeakPtr()),
+      kReEstablishConnectionDelay);
 }
 
 }  // namespace ash
