ash/system/power/video_activity_notifier_unittest.cc
@@ -23,8 +23,7 @@ class VideoActivityNotifierTest : public AshTestBase {
     AshTestBase::SetUp();
     power_client_ = static_cast<chromeos::FakePowerManagerClient*>(
         chromeos::DBusThreadManager::Get()->GetPowerManagerClient());
-    detector_ = std::make_unique<VideoDetector>(
-        viz::mojom::VideoDetectorObserverRequest());
+    detector_ = std::make_unique<VideoDetector>();
     notifier_.reset(new VideoActivityNotifier(detector_.get()));
   }
 
